--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>modest</title>
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="#" class="logo-img">
+    <header class="header">
+        <div class="container clearfix">
+            <div class="logo">
+                <img src="img/logo.png" class="logo-img">
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li class="menu-item menu-item-active"><a href="#" class="menu-link">home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">about</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">work</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">team</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">services</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">features</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#" class="home">home</a></li>
-                <li><a href="#" class="about">about</a></li>
-                <li><a href="#" class="work">work</a></li>
-                <li><a href="#" class="team">team</a></li>
-                <li><a href="#" class="services">services</a></li>
-                <li><a href="#" class="features">features</a></li>
-                <li><a href="#" class="contact">contact</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <section class="banner">
