--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </header>
     <main>
         <section class="banner">
-            <div class="welcome">
+            <div class="welcome container">
                 <div class="welcome-title">welcome to our marketplace</div>
                 <div class="welcome-text">Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit.Sed nisi metus, tristique ndolor non,
                     ornare sagittis dolor. Nulla vestibulu lacus ...</div>
                 <div class="welcome-btns">
-                    <a href="#" class="btn">view more</a>
-                    <a href="#" class="btn">video tour</a>
+                    <a href="#" class="btn view-more-btn">view more</a>
+                    <a href="#" class="btn video-tour-btn">video tour</a>
                 </div>
             </div>
             <div class="paginatior"></div>
