--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="team-title section-title">meet the team.</div>
             <div class="team-members">
                 <div class="team-member member-1">
-                    <img class="member-img" src="img/team-1.jpg">
+                    <img class="member-img" src="img/team-1.jpg" width="263" height="300">
                     <div class="member-info">
                         <p class="member-name">Gloria Bromley</p>
                         <p class="member-position">CEO and Founder</p>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="team-member member-2">
-                    <img class="member-img" src="img/team-2.jpg">
+                    <img class="member-img" src="img/team-2.jpg" width="262" height="300">
                     <div class="member-info">
                         <p class="member-name">Paul Torres</p>
                         <p class="member-position">Head of Development</p>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="team-member member-3">
-                    <img class="member-img" src="img/team-3.jpg">
+                    <img class="member-img" src="img/team-3.jpg" width="263" height="300">
                     <div class="member-info">
                         <p class="member-name">Judith Gillette</p>
                         <p class="member-position">Graphic Desinger</p>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="team-member member-4">
-                    <img class="member-img" src="img/team-4.jpg">
+                    <img class="member-img" src="img/team-4.jpg" width="262" height="300">
                     <div class="member-info">
                         <p class="member-name">Delores Reed</p>
                         <p class="member-position">Client Service Director</p>
