--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             <div class="team-title section-title">meet the team.</div>
             <div class="team-members">
                 <div class="team-member member-1">
-                    <img class="member-img" src="img/team-1.jpg" width="263" height="300">
+                    <div class="team-member-img">
+                        <img class="member-img" src="img/team-1.jpg" width="263" height="300">
+                    </div>
                     <div class="member-info">
                         <p class="member-name">Gloria Bromley</p>
                         <p class="member-position">CEO and Founder</p>
@@ -100,7 +102,9 @@
                     </div>
                 </div>
                 <div class="team-member member-2">
-                    <img class="member-img" src="img/team-2.jpg" width="262" height="300">
+                    <div class="team-member-img">
+                        <img class="member-img" src="img/team-2.jpg" width="262" height="300">
+                    </div>
                     <div class="member-info">
                         <p class="member-name">Paul Torres</p>
                         <p class="member-position">Head of Development</p>
@@ -112,7 +116,9 @@
                     </div>
                 </div>
                 <div class="team-member member-3">
-                    <img class="member-img" src="img/team-3.jpg" width="263" height="300">
+                    <div class="team-member-img">
+                        <img class="member-img" src="img/team-3.jpg" width="263" height="300">
+                    </div>
                     <div class="member-info">
                         <p class="member-name">Judith Gillette</p>
                         <p class="member-position">Graphic Desinger</p>
@@ -124,7 +130,9 @@
                     </div>
                 </div>
                 <div class="team-member member-4">
-                    <img class="member-img" src="img/team-4.jpg" width="262" height="300">
+                    <div class="team-member-img">
+                        <img class="member-img" src="img/team-4.jpg" width="262" height="300">
+                    </div>
                     <div class="member-info">
                         <p class="member-name">Delores Reed</p>
                         <p class="member-position">Client Service Director</p>
@@ -139,18 +147,18 @@
             </div>
         </section>
         <section class="work">
-            <div class="container clearfix">
-            <div class="work-title section-title">lovely work.</div>
-            <div class="portfolio">
-                <img src="img/work-1.jpg" class="portfolio-item">
-                <img src="img/work-2.jpg" class="portfolio-item">
-                <img src="img/work-3.jpg" class="portfolio-item">
-                <img src="img/work-4.jpg" class="portfolio-item">
-                <img src="img/work-5.jpg" class="portfolio-item">
-                <img src="img/work-6.jpg" class="portfolio-item">
-            </div>
-            <a href="#" class="btn">show me more</a>
+            <div class="container">
+                <div class="work-title section-title">lovely work.</div>
+                <div class="portfolio clearfix">
+                    <div class="portfolio-img"><img src="img/work-1.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img"><img src="img/work-2.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img"><img src="img/work-3.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img"><img src="img/work-4.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img"><img src="img/work-5.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img"><img src="img/work-6.jpg" class="portfolio-item" width="360" height="265"></div>
                 </div>
+                <div class="work-more"><a href="#" class="btn more-btn">show me more</a></div>
+            </div>
         </section>
         <section class="services">
             <div class="container clearfix">
