add part of services

--- a/index.html
+++ b/index.html
@@ -163,46 +163,64 @@
         <section class="services">
             <div class="container clearfix">
             <div class="services-title section-title">what we do.</div>
-            <div class="services-item">
+                <div class="services-items">
+                    <div class="services-item">
                 <img src="img/services-1.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
-            </div>
-            <div class="services-item">
+                <div class="services-item-title">Easy theme Setup</div>
+                <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                    ut venenatis justo commodo.
+                    Maecenas a justo nec velit egestas fermentum.</div>
+                </div>
+                    <div class="services-item">
                 <img src="img/services-2.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
+                <div class="services-item-title">pixel perfect design</div>
+                <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                    ut venenatis justo commodo.
+                    Maecenas a justo nec velit egestas fermentum.</div>
             </div>
-            <div class="services-item">
+                    <div class="services-item">
                 <img src="img/services-3.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
+                <div class="services-item-title">responsive display</div>
+                <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                    ut venenatis justo commodo.
+                    Maecenas a justo nec velit egestas fermentum.</div>
             </div>
-            <div class="services-item">
+                    <div class="services-item">
                 <img src="img/services-4.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
+                <div class="services-item-title">24/7 support copy</div>
+                <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                    ut venenatis justo commodo.
+                    Maecenas a justo nec velit egestas fermentum.</div>
             </div>
-            <div class="services-item">
-                <img src="img/services-1.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
-            </div>
-            <div class="services-item">
-                <img src="img/services-2.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
-            </div>
-            <div class="services-item">
-                <img src="img/services-3.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
-            </div>
-            <div class="services-item">
-                <img src="img/services-4.png" class="services-item-logo">
-                <div class="services-item-title"></div>
-                <div class="services-item-text"></div>
-            </div>
+                    <div class="services-item">
+                    <img src="img/services-1.png" class="services-item-logo">
+                    <div class="services-item-title">Easy theme Setup</div>
+                    <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                        ut venenatis justo commodo.
+                        Maecenas a justo nec velit egestas fermentum.</div>
+                </div>
+                    <div class="services-item">
+                    <img src="img/services-2.png" class="services-item-logo">
+                    <div class="services-item-title">pixel perfect design</div>
+                    <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                        ut venenatis justo commodo.
+                        Maecenas a justo nec velit egestas fermentum.</div>
+                </div>
+                    <div class="services-item">
+                    <img src="img/services-3.png" class="services-item-logo">
+                    <div class="services-item-title">responsive display</div>
+                    <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                        ut venenatis justo commodo.
+                        Maecenas a justo nec velit egestas fermentum.</div>
+                </div>
+                    <div class="services-item">
+                    <img src="img/services-4.png" class="services-item-logo">
+                    <div class="services-item-title">24/7 support copy</div>
+                    <div class="services-item-text">Nunc mattis lorem in leo lobortis,
+                        ut venenatis justo commodo.
+                        Maecenas a justo nec velit egestas fermentum.</div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="features">
