add contacts and footer

--- a/index.html
+++ b/index.html
@@ -259,20 +259,31 @@
             </div>
         </section>
         <section class="contact">
-            <div class="container clearfix">
-            <div class="contact-title section-title">stay in touch.</div>
-            <div class="map"></div>
+            <div class="contact-title section-title container">stay in touch.</div>
+            <div class="map"><img src="img/map.jpg" class="img-map"></div>
+            <div class="container">
             <div class="contact-info">
-                <div class="contact-info-title"></div>
-                <div class="contact-info-text"></div>
+                <div class="contact-info-title">contact information</div>
+                <div class="contact-info-text">
+                    <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Sed nisi metus, tristique nec dolor non, ornare sagittis dolor.
+                        Nulla vestibulum lacus sed molestie gravida. 
+                    </p>
+                    <p class="contact-text"> Cras fermentum elit quis magna congue, vel sodales arcu vestibulum.
+                        Nunc lobortis dui magna, quis dapibus lacus
+                    </p>
+                </div>
             </div>
             <form></form>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <div class="copyright">© Copyright 2014 by PSD Booster. All Rights Reserved.</div>
-        <div class="social"></div>
+        <div class="container clearfix">
+            <div class="copyright">© Copyright 2014 by PSD Booster. All Rights Reserved.</div>
+            <div class="social"></div>
+        </div>
     </footer>
 </body>
 </html>
