--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi.
                     Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
                 <div class="about-social">
-                    <a href="#" class="social-btn social-btn-fb">facebook</a>
-                    <a href="#" class="social-btn social-btn-tw">twitter</a>
-                    <a href="#" class="social-btn social-btn-gp">google plus</a>
-                    <a href="#" class="social-btn social-btn-dr">dribbble</a>
-                    <a href="#" class="social-btn social-btn-be">behance</a>
+                    <a href="#" class="social-btn about-social-btn"><i class="icon-facebook"></i></a>
+                    <a href="#" class="social-btn about-social-btn"><i class="icon-twitter"></i></a>
+                    <a href="#" class="social-btn about-social-btn"><i class="icon-google"></i></a>
+                    <a href="#" class="social-btn about-social-btn"><i class="icon-dribbble"></i></a>
+                    <a href="#" class="social-btn about-social-btn"><i class="icon-behance"></i></a>
                 </div>
             </div>
             <div class="about-goals">
@@ -96,9 +96,9 @@
                         <p class="member-position">CEO and Founder</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="member-social social-tw"></a>
-                        <a href="#" class="member-social social-fb"></a>
-                        <a href="#" class="member-social social-in"></a>
+                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-2">
@@ -110,9 +110,9 @@
                         <p class="member-position">Head of Development</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="member-social social-tw"></a>
-                        <a href="#" class="member-social social-fb"></a>
-                        <a href="#" class="member-social social-in"></a>
+                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-3">
@@ -124,9 +124,9 @@
                         <p class="member-position">Graphic Desinger</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="member-social social-tw"></a>
-                        <a href="#" class="member-social social-fb"></a>
-                        <a href="#" class="member-social social-in"></a>
+                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-4">
@@ -138,9 +138,9 @@
                         <p class="member-position">Client Service Director</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="member-social social-tw"></a>
-                        <a href="#" class="member-social social-fb"></a>
-                        <a href="#" class="member-social social-in"></a>
+                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,13 @@
     <footer>
         <div class="container clearfix">
             <div class="copyright">© Copyright 2014 by PSD Booster. All Rights Reserved.</div>
-            <div class="social"></div>
+            <div class="footer-social">
+                <a href="#" class="social-btn social-btn-footer"><i class="icon-twitter"></i></a>
+                <a href="#" class="social-btn social-btn-footer"><i class="icon-facebook"></i></a>
+                <a href="#" class="social-btn social-btn-footer"><i class="icon-skype"></i></a>
+                <a href="#" class="social-btn social-btn-footer"><i class="icon-behance"></i></a>
+                <a href="#" class="social-btn social-btn-footer"><i class="icon-linkedin2"></i></a>
+            </div>
         </div>
     </footer>
 </body>
