add banner and about pix perf

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>modest</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -32,7 +32,7 @@
             <div class="welcome container">
                 <div class="welcome-title">welcome to our marketplace</div>
                 <div class="welcome-text">Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.Sed nisi metus, tristique ndolor non,
+                    consectetur adipiscing elit. Sed nisi metus, tristique ndolor non,
                     ornare sagittis dolor. Nulla vestibulu lacus ...</div>
                 <div class="welcome-btns">
                     <a href="#" class="btn view-more-btn">view more</a>
@@ -52,7 +52,7 @@
                     Nunc lobortis dui magna, quis lacusullamcorper at. 
                 </p>
                 <p class="mission mission-second-part">Phasellus sollicitudin ante eros ornare,
-                    <em> sit amet luctus lorem semper</em>.
+                    <em> sit amet luctus lorem semper.</em>
                     Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi.
                     Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
                 <div class="about-social">
