--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>modest</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans:700' rel='stylesheet' type='text/css'>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -271,7 +271,8 @@
                         Sed nisi metus, tristique nec dolor non, ornare sagittis dolor.
                         Nulla vestibulum lacus sed molestie gravida. 
                     </p>
-                    <p class="contact-text"> Cras fermentum elit quis magna congue, vel sodales arcu vestibulum.
+                    <p class="contact-text"> Cras fermentum elit quis magna congue,
+                        <em>vel sodales</em> arcu vestibulum.
                         Nunc lobortis dui magna, quis dapibus lacus
                     </p>
                 </div>
@@ -282,14 +283,14 @@
         </section>
     </main>
     <footer>
-        <div class="container clearfix">
+        <div class="container clearfix footer-container">
             <div class="copyright">© Copyright 2014 by PSD Booster. All Rights Reserved.</div>
             <div class="footer-social">
-                <a href="#" class="social-btn social-btn-footer"><i class="icon-twitter"></i></a>
-                <a href="#" class="social-btn social-btn-footer"><i class="icon-facebook"></i></a>
-                <a href="#" class="social-btn social-btn-footer"><i class="icon-skype"></i></a>
-                <a href="#" class="social-btn social-btn-footer"><i class="icon-behance"></i></a>
-                <a href="#" class="social-btn social-btn-footer"><i class="icon-linkedin2"></i></a>
+                <a href="#" class="social-btn-footer"><i class="icon-twitter"></i></a>
+                <a href="#" class="social-btn-footer"><i class="icon-facebook"></i></a>
+                <a href="#" class="social-btn-footer"><i class="icon-skype"></i></a>
+                <a href="#" class="social-btn-footer"><i class="icon-behance"></i></a>
+                <a href="#" class="social-btn-footer"><i class="icon-linkedin2"></i></a>
             </div>
         </div>
     </footer>
