--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                         <p class="member-position">CEO and Founder</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-2">
@@ -112,9 +112,9 @@
                         <p class="member-position">Head of Development</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-3">
@@ -126,9 +126,9 @@
                         <p class="member-position">Graphic Desinger</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
                 <div class="team-member member-4">
@@ -140,9 +140,9 @@
                         <p class="member-position">Client Service Director</p>
                     </div>
                     <div class="actions">
-                        <a href="#" class="social-btn"><i class="icon-twitter"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-facebook"></i></a>
-                        <a href="#" class="social-btn"><i class="icon-linkedin2"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-twitter"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-facebook"></i></a>
+                        <a href="#" class="action-social-btn"><i class="icon-linkedin2"></i></a>
                     </div>
                 </div>
             </div>
@@ -152,12 +152,36 @@
             <div class="container">
                 <div class="work-title section-title">lovely work.</div>
                 <div class="portfolio clearfix">
-                    <div class="portfolio-img"><img src="img/work-1.jpg" class="portfolio-item" width="360" height="265"></div>
-                    <div class="portfolio-img"><img src="img/work-2.jpg" class="portfolio-item" width="360" height="265"></div>
-                    <div class="portfolio-img"><img src="img/work-3.jpg" class="portfolio-item" width="360" height="265"></div>
-                    <div class="portfolio-img"><img src="img/work-4.jpg" class="portfolio-item" width="360" height="265"></div>
-                    <div class="portfolio-img"><img src="img/work-5.jpg" class="portfolio-item" width="360" height="265"></div>
-                    <div class="portfolio-img"><img src="img/work-6.jpg" class="portfolio-item" width="360" height="265"></div>
+                    <div class="portfolio-img">
+                        <img src="img/work-1.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="img/work-2.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="img/work-3.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="img/work-4.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="img/work-5.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
+                    <div class="portfolio-img">
+                        <img src="img/work-6.jpg" class="portfolio-item" width="360" height="265">
+                        <div class="work-action">partnership guidlines</div>
+                        <img src="img/plus.png" class="action-img" width="20" height="20">
+                    </div>
                 </div>
                 <div class="work-more"><a href="#" class="btn more-btn">show me more</a></div>
             </div>
