--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
                     <a href="#" class="btn view-more-btn">view more</a>
                     <a href="#" class="btn video-tour-btn">video tour</a>
                 </div>
+                <div class="paginator">
+                    <a class="toggle" href="#"></a>
+                    <a class="toggle active-toggle" href="#"></a>
+                    <a class="toggle" href="#"></a>
+                </div>
             </div>
-            <div class="paginatior"></div>
         </section>
         <section class="about">
             <div class="container clearfix">
