--- a/index.html
+++ b/index.html
@@ -291,21 +291,39 @@
         <section class="contact">
             <div class="contact-title section-title container">stay in touch.</div>
             <div class="map"><img src="img/map.jpg" class="img-map"></div>
-            <div class="container">
-            <div class="contact-info">
-                <div class="contact-info-title">contact information</div>
-                <div class="contact-info-text">
-                    <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <div class="contact-container container clearfix">
+                <div class="contact-info">
+                    <div class="contact-info-title">contact information</div>
+                    <div class="contact-info-text">
+                        <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Sed nisi metus, tristique nec dolor non, ornare sagittis dolor.
                         Nulla vestibulum lacus sed molestie gravida. 
-                    </p>
-                    <p class="contact-text"> Cras fermentum elit quis magna congue,
+                        </p>
+                        <p class="contact-text"> Cras fermentum elit quis magna congue,
                         <em>vel sodales</em> arcu vestibulum.
                         Nunc lobortis dui magna, quis dapibus lacus
-                    </p>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <form></form>
+                <div class="modal-content-contact-us">
+                    <form class="contact-us" method="post">
+                        <div class="input-area">
+                            <div class="name-block">
+                                <label class="name-lbl" for="user-name-block">your name</label>
+                                <input id="user-name-block" class="user-name" type="text" name="user-name" required>
+                            </div>
+                            <div class="mail-block">
+                                <label class="mail-lbl" for="user-mail-block">your email</label>
+                                <input id="user-mail-block" class="user-mail" type="text" name="user-mail" required>
+                            </div>
+                            <label class="letter-lbl" for="user-message-block">your message</label>
+                            <textarea id="user-message-block" class="user-message" name="user-message"></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit" class="btn send-btn">send message</button>
+                        </div>
+                    </form>
+                </div>
                 </div>
             </div>
         </section>
